# model-inspector

./: .gitignore  pyproject.toml  setup.py
model_inspector/: __init__ copy.py  __init__.py  inspect_functions copy.py  inspect_functions.py
tests/: common.py  test_stable_diffusion.py  test_timm.py  test_torchvision.py
