[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Gunjun Lee", email = "gunjunlee97@gmail.com"},
]
maintainers = [
  {name = "Gunjun Lee", email = "gunjunlee97@gmail.com"},
]
requires-python = ">= 3.6"
name = "model-inspector"
description = "pytorch model inspector"
dynamic = ["version"]
readme = "README.md"
license = {text = "MIT License"}
