[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Gunjun Lee", email = "gunjunlee97@gmail.com"},
]
maintainers = [
  {name = "Gunjun Lee", email = "gunjunlee97@gmail.com"},
]
requires-python = ">= 3.6"
name = "model-inspector"
description = "pytorch model inspector"
dynamic = ["version"]
readme = "README.md"
license = {text = "MIT License"}

[tool.pytest.ini_options]
minversion = "6.0"
markers = [
  "fast", #: marks tests that are fast
  "timm", #: marks tests that require timm library
  "sd", #: marks tests that require stable-diffusion library
]
testpaths = [
    "tests",
]
